Fix alignment of change link on full-width summary lists

--- a/app/assets/stylesheets/components/_summary-list.scss
+++ b/app/assets/stylesheets/components/_summary-list.scss
@@ -16,6 +16,7 @@
   .nhsuk-summary-list__value,
   .nhsuk-summary-list__actions {
     display: block;
+    text-align: left;
     width: 100%;
   }
 
